Fixes an issue with spacing and centering on the main page.

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -44,6 +44,7 @@ div#story {
 
 #links_container {
   display: inline-block;
+  font-size: 0; // Fixes a spacing bug
 }
 
 #links_container .column {
@@ -106,7 +107,7 @@ table {
 /*****************************************************************************************
  * Main Styles
  ****************************************************************************************/
-.container {
+#container {
   padding-top: 5px;
   width: 900px;
   margin: 0 auto;
